fixed intro alignment

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a:active {
 }
 
 #intro {
-  text-align: justify;
+
 }
 
 #releases {
